--- a/game/app-play.html
+++ b/game/app-play.html
@@ -161,7 +161,7 @@
     </div>
 
 <script>
-   document.addEventListener('DOMContentLoaded', () => {
+document.addEventListener('DOMContentLoaded', () => {
 
   const isAndroid = /Android/i.test(navigator.userAgent);
   const isIOS = /iPhone|iPad|iPod/i.test(navigator.userAgent);
@@ -170,160 +170,149 @@
     window.matchMedia('(display-mode: standalone)').matches ||
     window.navigator.standalone === true;
 
-// -----------------------------
-// ⭐ iPhone Safari Drawer Logic
-// -----------------------------
-if (isIOS && !isPWA) {
-  const drawer = document.getElementById('banner-drawer');
-  const handle = document.getElementById('banner-drawer-handle');
-  const unityCanvas = document.getElementById('unity-canvas');
+  // -----------------------------
+  // ⭐ Drawer Logic (collapse-only)
+  // -----------------------------
+  if (isIOS && !isPWA) {
+    const drawer = document.getElementById('banner-drawer');
+    const handle = document.getElementById('banner-drawer-handle');
 
-  let drawerOpen = true;
+    if (drawer && handle) {
+      let drawerOpen = true;
 
-  // Dynamically measure drawer height
-  function getDrawerHeight() {
-    return drawer.getBoundingClientRect().height;
-  }
-
-  // Resize canvas based on drawer state
-  function updateCanvasHeight() {
-    if (drawerOpen) {
-      unityCanvas.style.height = `calc(100dvh - ${getDrawerHeight()}px)`;
-    } else {
-      unityCanvas.style.height = `100dvh`;
-    }
-    unityCanvas.getBoundingClientRect(); // force layout
-  }
-
-  // Initial arrow + canvas sizing
-  handle.textContent = "▾";
-  updateCanvasHeight();
-
-  handle.addEventListener('click', () => {
-    drawerOpen = !drawerOpen;
-
-    if (drawerOpen) {
-      drawer.classList.remove('closed');
       handle.textContent = "▾";
-    } else {
-      drawer.classList.add('closed');
-      handle.textContent = "▴";
-    }
 
-    drawer.offsetHeight; // force repaint
-    updateCanvasHeight();
-  });
-}
+      handle.addEventListener('click', () => {
+        if (!drawerOpen) return; // no re-open
+
+        drawerOpen = false;
+        drawer.classList.add('closed');
+        handle.textContent = "▴";
+
+        // Hide handle after animation
+        setTimeout(() => {
+          handle.style.display = 'none';
+        }, 300);
+      });
+    }
+  }
 
   // -----------------------------
   // ⭐ Carousel Activation Logic
   // -----------------------------
-  if (!isMobile && !isPWA) {
-    return; // desktop only
-  }
-
   const container = document.querySelector('#bottom-banner .ad-scroll-container-mobile');
   const slides = document.querySelectorAll('#bottom-banner .ad-scroll-container-mobile .ad-slide');
   const totalSlides = slides.length;
 
-  if (!container || totalSlides === 0) {
-    console.warn('Carousel: No slides found.');
-    return;
-  }
+  if (container && totalSlides > 0 && (isMobile || isPWA)) {
 
-  let autoScrollInterval;
-  let currentIndex = 0;
+    let autoScrollInterval;
+    let currentIndex = 0;
 
-  const firstClone = slides[0].cloneNode(true);
-  container.appendChild(firstClone);
+    // Clone first slide for seamless loop
+    const firstClone = slides[0].cloneNode(true);
+    container.appendChild(firstClone);
 
-  function setInitialPosition() {
-    container.scrollTo({ left: 0, behavior: 'instant' });
-    currentIndex = 0;
-  }
-
-  function getBoxWidth() {
-    const slideWidth = slides[0].offsetWidth;
-    const slideMargin = window.innerWidth <= 480 ? 10 : 40;
-    return slideWidth + slideMargin;
-  }
-
-  function startAutoScroll() {
-    clearInterval(autoScrollInterval);
-    autoScrollInterval = setInterval(() => {
-      currentIndex++;
-      if (currentIndex >= totalSlides + 1) {
-        container.scrollTo({ left: 0, behavior: 'instant' });
-        currentIndex = 1;
-      }
-      container.scrollTo({
-        left: currentIndex * getBoxWidth(),
-        behavior: 'smooth'
-      });
-    }, 8000);
-  }
-
-  // -----------------------------
-  // ⭐ Freeze-Proof Touch Handling
-  // -----------------------------
-  let touchStartX = 0;
-  let touchStartY = 0;
-  let touchMoved = false;
-
-  container.addEventListener('touchstart', (e) => {
-    touchStartX = e.touches[0].clientX;
-    touchStartY = e.touches[0].clientY;
-    touchMoved = false;
-  }, { passive: true });
-
-  container.addEventListener('touchmove', (e) => {
-    const dx = Math.abs(e.touches[0].clientX - touchStartX);
-    const dy = Math.abs(e.touches[0].clientY - touchStartY);
-
-    if (dx > dy) {
-      e.preventDefault(); // block horizontal scroll only
-      touchMoved = true;
+    function setInitialPosition() {
+      container.scrollTo({ left: 0, behavior: 'instant' });
+      currentIndex = 0;
     }
-  }, { passive: false });
 
-  container.addEventListener('touchend', (e) => {
-    if (!touchMoved) {
-      const target = e.target.closest('a');
-      if (target && target.href) {
-        window.location.href = target.href;
-      }
+    function getBoxWidth() {
+      const slideWidth = slides[0].offsetWidth;
+      const slideMargin = window.innerWidth <= 480 ? 10 : 40;
+      return slideWidth + slideMargin;
     }
-  }, { passive: true });
 
-  // -----------------------------
-  // Resize handling
-  // -----------------------------
-  let resizeTimeout;
-  window.addEventListener('resize', () => {
-    clearTimeout(resizeTimeout);
-    resizeTimeout = setTimeout(() => {
+    function startAutoScroll() {
+      clearInterval(autoScrollInterval);
+      autoScrollInterval = setInterval(() => {
+        currentIndex++;
+        if (currentIndex >= totalSlides + 1) {
+          container.scrollTo({ left: 0, behavior: 'instant' });
+          currentIndex = 1;
+        }
+        container.scrollTo({
+          left: currentIndex * getBoxWidth(),
+          behavior: 'smooth'
+        });
+      }, 8000);
+    }
+
+    // -----------------------------
+    // ⭐ Freeze-Proof Touch Handling
+    // -----------------------------
+    let touchStartX = 0;
+    let touchStartY = 0;
+    let touchMoved = false;
+
+    container.addEventListener('touchstart', (e) => {
+      touchStartX = e.touches[0].clientX;
+      touchStartY = e.touches[0].clientY;
+      touchMoved = false;
+    }, { passive: true });
+
+    container.addEventListener('touchmove', (e) => {
+      const dx = Math.abs(e.touches[0].clientX - touchStartX);
+      const dy = Math.abs(e.touches[0].clientY - touchStartY);
+
+      if (dx > dy) {
+        e.preventDefault();
+        touchMoved = true;
+      }
+    }, { passive: false });
+
+    container.addEventListener('touchend', (e) => {
+      if (!touchMoved) {
+        const target = e.target.closest('a');
+        if (target && target.href) {
+          window.location.href = target.href;
+        }
+      }
+    }, { passive: true });
+
+    // -----------------------------
+    // ⭐ Resize & PWA return handling
+    // -----------------------------
+    function realignCarousel() {
       container.scrollTo({
         left: currentIndex * getBoxWidth(),
         behavior: 'instant'
       });
       startAutoScroll();
-    }, 100);
-  });
+    }
 
-  // Init
-  setInitialPosition();
-  startAutoScroll();
+    let resizeTimeout;
+    window.addEventListener('resize', () => {
+      clearTimeout(resizeTimeout);
+      resizeTimeout = setTimeout(realignCarousel, 100);
+    });
+
+    // iOS PWA / Safari back-forward cache fix
+    window.addEventListener('pageshow', (event) => {
+      if (event.persisted || performance.getEntriesByType('navigation')[0]?.type === 'back_forward') {
+        setInitialPosition();
+        startAutoScroll();
+      }
+    });
+
+    // Init
+    setInitialPosition();
+    startAutoScroll();
+  }
 });
 </script>
 
 <script>
+  // -----------------------------
+  // ⭐ Unity Loader
+  // -----------------------------
   var container = document.querySelector("#unity-container");
   var canvas = document.querySelector("#unity-canvas");
   var loadingBar = document.querySelector("#unity-loading-bar");
   var progressBarFull = document.querySelector("#unity-progress-bar-full");
   var fullscreenButton = document.querySelector("#unity-fullscreen-button");
   var warningBanner = document.querySelector("#unity-warning");
-  var bottomBanner = document.querySelector("#bottom-banner");
 
   function unityShowBanner(msg, type) {
     function updateBannerVisibility() {
@@ -335,7 +324,7 @@ if (isIOS && !isPWA) {
     if (type == 'error') div.style = 'background: red; padding: 10px;';
     else {
       if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-      setTimeout(function () {
+      setTimeout(() => {
         warningBanner.removeChild(div);
         updateBannerVisibility();
       }, 5000);
@@ -360,53 +349,49 @@ if (isIOS && !isPWA) {
     var meta = document.createElement('meta');
     meta.name = 'viewport';
     meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-    document.getElementsByTagName('head')[0].appendChild(meta);
-    container.className = "unity-mobile";
-    canvas.className = "unity-mobile";
+    document.head.appendChild(meta);
+
+    container.classList.add("unity-mobile");
+    canvas.classList.add("unity-mobile");
   } else {
+    container.classList.add("unity-desktop");
     canvas.style.width = "960px";
     canvas.style.height = "600px";
   }
 
   loadingBar.style.display = "block";
+
   var script = document.createElement("script");
   script.src = loaderUrl;
   script.onload = () => {
     createUnityInstance(canvas, config, (progress) => {
-      progressBarFull.style.width = 100 * progress + "%";
+      progressBarFull.style.width = (100 * progress) + "%";
     }).then((unityInstance) => {
       loadingBar.style.display = "none";
-      fullscreenButton.onclick = () => {
-        unityInstance.SetFullscreen(1);
-      };
-    }).catch((message) => {
-      alert(message);
-    });
+      if (fullscreenButton) {
+        fullscreenButton.onclick = () => unityInstance.SetFullscreen(1);
+      }
+    }).catch((message) => alert(message));
   };
   document.body.appendChild(script);
 </script>
 
 <script>
+  // -----------------------------
+  // ⭐ Platform Flags + Banner Visibility
+  // -----------------------------
   const isAndroid = /Android/i.test(navigator.userAgent);
   const isIOS = /iPhone|iPad|iPod/i.test(navigator.userAgent);
   const isPWA =
     window.matchMedia('(display-mode: standalone)').matches ||
     window.navigator.standalone === true;
 
-  if (isAndroid) {
-    document.body.classList.add('is-android');
-  }
-  if (isIOS) {
-    document.body.classList.add('is-ios');
-  }
-  if (isPWA) {
-    document.body.classList.add('is-pwa');
-  }
+  if (isAndroid) document.body.classList.add('is-android');
+  if (isIOS) document.body.classList.add('is-ios');
+  if (isPWA) document.body.classList.add('is-pwa');
 
-  // ⭐ Updated banner visibility logic
-  // Android → show
-  // PWA → show
-  // iPhone Safari → show (drawer will control visibility)
+  const bottomBanner = document.querySelector('#bottom-banner');
+
   if (bottomBanner && (isAndroid || isPWA || (isIOS && !isPWA))) {
     bottomBanner.style.display = 'block';
     document.body.classList.add('banner-visible');
