--- a/game/app-play.html
+++ b/game/app-play.html
@@ -167,22 +167,23 @@ document.addEventListener('DOMContentLoaded', () => {
         if (aspect <= 2.0 && window.unityInstance) {
           window.unityInstance.SetFullscreen(1);
 
-          // Force canvas resize after delay (for iOS address bar collapse)
+          // Force canvas resize AFTER transition (0.35s + buffer)
           setTimeout(() => {
-            const canvas = document.querySelector('#unity-canvas');
-            if (canvas) {
-              canvas.style.width = '100vw';
-              canvas.style.height = '100dvh';
+            if (window.unityInstance && /iPhone/i.test(navigator.userAgent) && !navigator.standalone) {
+              const canvas = document.querySelector('#unity-canvas');
+              if (canvas) {
+                canvas.style.width = '100vw';
+                canvas.style.height = '100dvh';
+              }
+              window.dispatchEvent(new Event('resize'));
             }
-            // Trigger Unity resize event
-            window.dispatchEvent(new Event('resize'));
-          }, 400); // 400ms gives time for fullscreen/address bar to react
+          }, 450);  // matches 0.35s transition + buffer
         }
       });
     }
   }
 
-  // Carousel logic (unchanged)
+  // Carousel logic (unchanged from your original)
   const container = document.querySelector('#bottom-banner .ad-scroll-container-mobile');
   const slides = document.querySelectorAll('#bottom-banner .ad-scroll-container-mobile .ad-slide');
   const totalSlides = slides.length;
@@ -220,7 +221,7 @@ document.addEventListener('DOMContentLoaded', () => {
       }, 8000);
     }
 
-    // Touch handling
+    // Touch handling to prevent conflict with game
     let touchStartX = 0, touchStartY = 0, touchMoved = false;
 
     container.addEventListener('touchstart', (e) => {
@@ -269,95 +270,95 @@ document.addEventListener('DOMContentLoaded', () => {
 });
 </script>
 
-<!-- Unity Loader (unchanged) -->
-<script>
-  var container = document.querySelector("#unity-container");
-  var canvas = document.querySelector("#unity-canvas");
-  var loadingBar = document.querySelector("#unity-loading-bar");
-  var progressBarFull = document.querySelector("#unity-progress-bar-full");
-  var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-  var warningBanner = document.querySelector("#unity-warning");
+<!-- Unity Loader -->
+  <script>
+    var container = document.querySelector("#unity-container");
+    var canvas = document.querySelector("#unity-canvas");
+    var loadingBar = document.querySelector("#unity-loading-bar");
+    var progressBarFull = document.querySelector("#unity-progress-bar-full");
+    var fullscreenButton = document.querySelector("#unity-fullscreen-button");
+    var warningBanner = document.querySelector("#unity-warning");
 
-  function unityShowBanner(msg, type) {
-    function updateBannerVisibility() {
-      warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
-    }
-    var div = document.createElement('div');
-    div.innerHTML = msg;
-    warningBanner.appendChild(div);
-    if (type == 'error') div.style = 'background: red; padding: 10px;';
-    else {
-      if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-      setTimeout(() => {
-        warningBanner.removeChild(div);
-        updateBannerVisibility();
-      }, 5000);
-    }
-    updateBannerVisibility();
-  }
-
-  var buildUrl = "Build";
-  var loaderUrl = buildUrl + "/GiddGameWeb.loader.js";
-  var config = {
-    dataUrl: buildUrl + "/GiddGameWeb.data.unityweb",
-    frameworkUrl: buildUrl + "/GiddGameWeb.framework.js.unityweb",
-    codeUrl: buildUrl + "/GiddGameWeb.wasm.unityweb",
-    streamingAssetsUrl: "StreamingAssets",
-    companyName: "DefaultCompany",
-    productName: "giddy",
-    productVersion: "1.0",
-    showBanner: unityShowBanner,
-  };
-
-  if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-    container.classList.add("unity-mobile");
-    canvas.classList.add("unity-mobile");
-  } else {
-    container.classList.add("unity-desktop");
-    canvas.style.width = "960px";
-    canvas.style.height = "600px";
-  }
-
-  loadingBar.style.display = "block";
-
-  var script = document.createElement("script");
-  script.src = loaderUrl;
-  script.onload = () => {
-    createUnityInstance(canvas, config, (progress) => {
-      progressBarFull.style.width = (100 * progress) + "%";
-    }).then((unityInstance) => {
-      loadingBar.style.display = "none";
-      window.unityInstance = unityInstance;
-      if (fullscreenButton) {
-        fullscreenButton.onclick = () => unityInstance.SetFullscreen(1);
+    function unityShowBanner(msg, type) {
+      function updateBannerVisibility() {
+        warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
       }
-    }).catch((message) => alert(message));
-  };
-  document.body.appendChild(script);
-</script>
-
-<!-- Global resize handler for dynamic changes (address bar collapse, rotation, fullscreen) -->
-<script>
-  // Runs continuously – catches address bar hide, rotation, fullscreen changes
-  window.addEventListener('resize', () => {
-    if (window.unityInstance) {
-      const canvas = document.querySelector('#unity-canvas');
-      if (canvas) {
-        canvas.style.width = '100vw';
-        canvas.style.height = '100dvh';
-        // Extra kick for Unity engine resize
-        window.unityInstance.SendMessage('GameController', 'OnResize'); // optional - if you have a method in Unity
+      var div = document.createElement('div');
+      div.innerHTML = msg;
+      warningBanner.appendChild(div);
+      if (type == 'error') div.style = 'background: red; padding: 10px;';
+      else {
+        if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+        setTimeout(() => {
+          warningBanner.removeChild(div);
+          updateBannerVisibility();
+        }, 5000);
       }
+      updateBannerVisibility();
     }
-  });
 
-  // iOS-specific visualViewport for address bar collapse detection
-  if ('visualViewport' in window) {
-    window.visualViewport.addEventListener('resize', () => {
-      window.dispatchEvent(new Event('resize'));
+    var buildUrl = "Build";
+    var loaderUrl = buildUrl + "/GiddGameWeb.loader.js";
+    var config = {
+      dataUrl: buildUrl + "/GiddGameWeb.data.unityweb",
+      frameworkUrl: buildUrl + "/GiddGameWeb.framework.js.unityweb",
+      codeUrl: buildUrl + "/GiddGameWeb.wasm.unityweb",
+      streamingAssetsUrl: "StreamingAssets",
+      companyName: "DefaultCompany",
+      productName: "giddy",
+      productVersion: "1.0",
+      showBanner: unityShowBanner,
+    };
+
+    if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+      container.classList.add("unity-mobile");
+      canvas.classList.add("unity-mobile");
+    } else {
+      container.classList.add("unity-desktop");
+      canvas.style.width = "960px";
+      canvas.style.height = "600px";
+    }
+
+    loadingBar.style.display = "block";
+
+    var script = document.createElement("script");
+    script.src = loaderUrl;
+    script.onload = () => {
+      createUnityInstance(canvas, config, (progress) => {
+        progressBarFull.style.width = (100 * progress) + "%";
+      }).then((unityInstance) => {
+        loadingBar.style.display = "none";
+        window.unityInstance = unityInstance; // Make accessible for fullscreen trigger
+        if (fullscreenButton) {
+          fullscreenButton.onclick = () => unityInstance.SetFullscreen(1);
+        }
+      }).catch((message) => alert(message));
+    };
+    document.body.appendChild(script);
+  </script>
+
+  <!-- Global resize handler for dynamic changes (address bar collapse, rotation, fullscreen) -->
+  <script>
+    // Runs continuously – catches address bar hide, rotation, fullscreen changes
+    window.addEventListener('resize', () => {
+      if (window.unityInstance) {
+        const canvas = document.querySelector('#unity-canvas');
+        if (canvas) {
+          canvas.style.width = '100vw';
+          canvas.style.height = '100dvh';
+          // Extra kick for Unity engine resize
+          window.unityInstance.SendMessage('GameController', 'OnResize'); // optional - if you have a method in Unity
+        }
+      }
     });
-  }
-</script>
+
+    // iOS-specific visualViewport for address bar collapse detection
+    if ('visualViewport' in window) {
+      window.visualViewport.addEventListener('resize', () => {
+        window.dispatchEvent(new Event('resize'));
+      });
+    }
+  </script>
 
   <!-- Platform Flags + Banner Visibility -->
   <script>
