--- a/game/app-play.html
+++ b/game/app-play.html
@@ -137,47 +137,28 @@
       </div>
     </div>
 
-    <script>
-document.addEventListener('DOMContentLoaded', () => {
-
-  // Run on iPhone Safari, Android, and PWAs — NOT desktop
+<script>document.addEventListener('DOMContentLoaded', () => {  // Run on iPhone Safari, Android, and PWAs — NOT desktop
   const isMobile = /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
   const isPWA =
     window.matchMedia('(display-mode: standalone)').matches ||
-    window.navigator.standalone === true;
-
-  if (!isMobile && !isPWA) {
+    window.navigator.standalone === true;  if (!isMobile && !isPWA) {
     return; // desktop only → no carousel
-  }
-
-  const container = document.querySelector('#bottom-banner .ad-scroll-container-mobile');
+  }  const container = document.querySelector('#bottom-banner .ad-scroll-container-mobile');
   const slides = document.querySelectorAll('#bottom-banner .ad-scroll-container-mobile .ad-slide');
-  const totalSlides = slides.length;
-
-  if (!container || totalSlides === 0) {
+  const totalSlides = slides.length;  if (!container || totalSlides === 0) {
     console.warn('Carousel: No slides found.');
     return;
-  }
-
-  let autoScrollInterval;
-  let currentIndex = 0;
-
-  // Clone first slide for looping
+  }  let autoScrollInterval;
+  let currentIndex = 0;  // Clone first slide for looping
   const firstClone = slides[0].cloneNode(true);
-  container.appendChild(firstClone);
-
-  function setInitialPosition() {
+  container.appendChild(firstClone);  function setInitialPosition() {
     container.scrollTo({ left: 0, behavior: 'instant' });
     currentIndex = 0;
-  }
-
-  function getBoxWidth() {
+  }  function getBoxWidth() {
     const slideWidth = slides[0].offsetWidth;
     const slideMargin = window.innerWidth <= 480 ? 10 : 40;
     return slideWidth + slideMargin;
-  }
-
-  function startAutoScroll() {
+  }  function startAutoScroll() {
     clearInterval(autoScrollInterval);
     autoScrollInterval = setInterval(() => {
       currentIndex++;
@@ -190,38 +171,26 @@ document.addEventListener('DOMContentLoaded', () => {
         behavior: 'smooth'
       });
     }, 8000);
-  }
-
-  // Disable ALL manual scrolling
+  }  // Disable ALL manual scrolling
   container.addEventListener('touchmove', (e) => {
     e.preventDefault();
-  }, { passive: false });
-
-  container.addEventListener('wheel', (e) => {
+  }, { passive: false });  container.addEventListener('wheel', (e) => {
     e.preventDefault();
-  }, { passive: false });
-
-  // Tap detection
+  }, { passive: false });  // Tap detection
   let touchStartX = 0;
   let touchStartY = 0;
-  let touchMoved = false;
-
-  container.addEventListener('touchstart', (e) => {
+  let touchMoved = false;  container.addEventListener('touchstart', (e) => {
     touchStartX = e.touches[0].clientX;
     touchStartY = e.touches[0].clientY;
     touchMoved = false;
-  }, { passive: true });
-
-  container.addEventListener('touchend', (e) => {
+  }, { passive: true });  container.addEventListener('touchend', (e) => {
     if (!touchMoved) {
       const target = e.target.closest('a');
       if (target && target.href) {
         window.location.href = target.href;
       }
     }
-  }, { passive: true });
-
-  // Resize handling
+  }, { passive: true });  // Resize handling
   let resizeTimeout;
   window.addEventListener('resize', () => {
     clearTimeout(resizeTimeout);
@@ -232,14 +201,11 @@ document.addEventListener('DOMContentLoaded', () => {
       });
       startAutoScroll();
     }, 100);
-  });
-
-  // Init
+  });  // Init
   setInitialPosition();
   startAutoScroll();
 });
     </script>
-
     <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
@@ -297,7 +263,7 @@ document.addEventListener('DOMContentLoaded', () => {
       // existing user projects that might rely on the earlier manual
       // JS_FileSystem_Sync() behavior, but in future Unity version, this will be
       // expected to change.
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent) ) {
         // Mobile device style: fill the whole browser client area with the game canvas:
         var meta = document.createElement('meta');
         meta.name = 'viewport';
@@ -333,28 +299,28 @@ document.addEventListener('DOMContentLoaded', () => {
 
     <script>
       // Detect platform
-      const isAndroid = /Android/i.test(navigator.userAgent);
-      const isIOS = /iPhone|iPad|iPod/i.test(navigator.userAgent);
-      const isPWA =
-        window.matchMedia('(display-mode: standalone)').matches ||
-        window.navigator.standalone === true;
-      // Add classes for CSS targeting
-      if (isAndroid) {
-        document.body.classList.add('is-android');
-      }
-      if (isIOS) {
-        document.body.classList.add('is-ios');
-      }
-      if (isPWA) {
-        document.body.classList.add('is-pwa');
-      }
-      // Show banner only on Android or PWA + add class for height adjustments
-      if (bottomBanner && (isAndroid || isPWA)) {
-        bottomBanner.style.display = 'block';
-        document.body.classList.add('banner-visible');  // ← new: for canvas height subtraction
-      }
+  const isAndroid = /Android/i.test(navigator.userAgent);
+  const isIOS = /iPhone|iPad|iPod/i.test(navigator.userAgent);
+  const isPWA =
+    window.matchMedia('(display-mode: standalone)').matches ||
+    window.navigator.standalone === true;
+  // Add classes for CSS targeting
+  if (isAndroid) {
+    document.body.classList.add('is-android');
+  }
+  if (isIOS) {
+    document.body.classList.add('is-ios');
+  }
+  if (isPWA) {
+    document.body.classList.add('is-pwa');
+  }
+  // Show banner only on Android or PWA + add class for height adjustments
+  if (bottomBanner && (isAndroid || isPWA)) {
+    bottomBanner.style.display = 'block';
+    document.body.classList.add('banner-visible');  // ← new: for canvas height subtraction
+  }
     </script>
-    
+
     <!-- Link to non-critical JavaScript files -->
     <script src="../assets/js/jquery.scrollex.min.js"></script>
     <script src="../assets/js/jquery.scrolly.min.js"></script>
